# Kapok

./: CMakeLists.txt  LICENSE  README.md  Test.hpp  main.cpp  test_kapok.hpp  test_performance.cpp  unit_test.hpp
kapok/: Common.hpp  DeSerializer.hpp  JsonUtil.hpp  Kapok.hpp  Serializer.hpp  traits.hpp
rapidjson/: encodings.h
test/: CMakeLists.txt  UnitTest.hpp  panic.cpp  primitive.cpp  stl.cpp  user.cpp
vcproject/: vcproject.sln
vcproject/vcproject/: main.cpp  vcproject.vcxproj
